package com.faceattend_edu.util;

public class Views {
    public static class Public {}

    public static class Internal extends Public {}

    // ------------------------------------------

    public static class RolePermissions {} // Role

    public static class UserDetail {} // User

    public static class ScheduleDetail {} // Schedule

    public static class ActiveEnrollments {} // Enrollment

    public static class AttendanceDetail {} // Attendance

    public static class StudentAttendanceSummary {} // Attendance

    public static class PendingJustifications {} // Justification

    public static class DeviceStatus {} // IotDevice

    public static class ActiveFacialEmbeddings {} // FacialEmbedding

    public static class AuditLog {} // Log

    public static class SchoolDashboard {} // School

    public static class TeacherCourses {} // Schedule

    public static class CourseAttendanceSummary {} // Attendance

    public static class StudentRegistrationStatus {} // Person

    public static class ClassroomOccupancy {} // Classroom

    public static class OfflineDevices {} // IotDevice

    public static class StudentsAtRisk {} // StudentAttendanceSummary

    public static class JustificationHistory {} // Justification

    public static class TodaySchedule {} // ScheduleDetail

    public static class PersonsWithoutUser {} // Person
}
